# marquer

./: COPYING  README.md  meson.build
.github/workflows/: main.yml
data/: marquer.appdata.xml  marquer.desktop
src/: Application.vala  MainWindow.vala
src/Utils/: DriveManager.vala  VolatileDataStore.vala
src/Widgets/: DriveListRowItem.vala  ISOChooser.vala  LeftSelectDisk.vala  LeftSelectDrive.vala  LeftStartFlash.vala  RightFlashingProgress.vala  RightSelectDisk.vala  RightSelectDrive.vala  RightStartFlash.vala  StartFlashWaiting.vala  StartFlashWarning.vala
